--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "start",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,23 +9,32 @@
   "author": "Ergo Konuni",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.18.2",
-    "del": "^2.2.2",
+    "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-clean-css": "^2.0.13",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache": "^1.0.1",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
-    "gulp-file-include": "^1.0.0",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-file-include": "^1.2.0",
+    "gulp-imagemin": "^4.0.0",
     "gulp-remove-html": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^5.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "imagemin-pngquant": "^5.0.1",
     "node-bourbon": "^4.2.8",
-    "vinyl-ftp": "^0.5.0"
-  }
+    "vinyl-ftp": "^0.6.0"
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ergokonuni/start.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ergokonuni/start/issues"
+  },
+  "homepage": "https://github.com/ergokonuni/start#readme"
 }
