--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^1.0.1",
+    "gulp-changed": "^3.1.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^1.2.0",
     "gulp-imagemin": "^4.0.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-pug-inheritance": "^0.2.1",
     "gulp-remove-html": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
