--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^1.0.1",
+    "gulp-change": "^1.0.0",
     "gulp-changed": "^3.1.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
